# no_std_tool

./: .covopt.toml  .covopt_tuned.env  .gitignore  Cargo.toml  README.md  audit.md  cargo_out.json  fix_unsafe.py  fix_unsafe_loop.py
.agents/: AGENTS.md
no_std_tool_macros/: .gitignore  Cargo.toml
no_std_tool_macros/src/: lib.rs
src/: allocator.rs  bitmap_sched.rs  collections.rs  compress.rs  debug.rs  dualcache_stub.rs  lib.rs  macros.rs  math.rs  sync.rs
src/collections/: bloom.rs  flat_map.rs  mpsc_queue.rs
src/scriptgo_vm/: assembler.rs  instruction.rs  mod.rs  vm.rs  vm_tests.rs
src/vec101_compute/: mod.rs  types.rs
src/vec101_compute/simd/: avx2.rs  mod.rs  neon.rs  scalar.rs
tests/: integration.rs  test_macros.rs
