[package]
name = "no_std_tool"
version = "1.1.0"
edition = "2024"
authors = ["hianova"]
description = "Common no_std boilerplate and synchronization macros"
license = "MIT"
keywords = ["no_std", "macros", "sync"]
categories = ["no-std"]
repository = "https://github.com/hianova/no_std_tool"


[dependencies]
lazy_static = { workspace = true }
heapless = { workspace = true }
no_std_tool_macros = { path = "no_std_tool_macros", version = "1.1.0" }
ahash = { workspace = true }
hashbrown = { workspace = true }
rkyv = { workspace = true }
spin = { workspace = true }
libm = { workspace = true }
bytecheck = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }

[features]
default = []
std = [
    "rkyv/std",
    "ed25519-dalek/std",
    "sha2/std",
    "bytecheck/std",
    "rand_core/std",
    "ahash/std",
]
[lints.rust]
# deny all warnings natively
warnings = "deny"

[lints.clippy]
all = "deny"
