[package]
name = "no_std_tool"
version = "1.1.0"
edition = "2024"
authors = ["hianova"]
description = "Common no_std boilerplate and synchronization macros"
license = "MIT"
keywords = ["no_std", "macros", "sync"]
categories = ["no-std"]
repository = "https://github.com/hianova/no_std_tool"


[dependencies]
heapless = { workspace = true }
ahash = { workspace = true }
hashbrown = { workspace = true }
serde = { workspace = true }

[features]
default = []
std = [
    "ahash/std",
]
[lints.rust]
# deny all warnings natively
warnings = "deny"

[lints.clippy]
all = "deny"
