[package]
name = "no_std_tool_macros"
version = "1.1.0"
edition = "2024"
authors = ["hianova"]
description = "Macros for no_std_tool"
license = "MIT"
repository = "https://github.com/hianova/no_std_tool"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
